# hiisi

./: Cargo.toml  LICENSE  README.md
doc/: .excalidraw
src/: lib.rs  main.rs
src/alpha_vantage/: api.rs  error.rs
src/data/: mod.rs  time_series.rs
tests/integration/: alpha_vantage.rs  mod.rs
tests/integration/fixtures/: time_series_daily_adjusted_response.json
