[package]
name = "hiisi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
reqwest = { version = "0.11.15", features = ["blocking", "json"] }
url = { version = "2.3.1", features = ["serde"] }
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
thiserror = "1.0.40"

[dev-dependencies]
dotenv = "0.15.0"
httpmock = {version = "0.6.7", default-features=false, features = [] }
